# yolocrop

./: README.md  pyproject.toml
yolocrop/: main.py
